clusters/homelab/apps/linkding/strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: linkding-stripprefix
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /linkding
