clusters/homelab/apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - image: sissbruecker/linkding:latest
        name: linkding
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: data
          mountPath: /etc/linkding/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkding-pvc
