clusters/homelab/apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: apps
spec:
  selector:
    app: linkding
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
      name: http
  type: ClusterIP
