clusters/homelab/apps/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    #traefik.ingress.kubernetes.io/router.middlewares: apps-linkding-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: linkding.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding-service
            port:
              number: 9090
